Fixes a scrollbar bug in the analysis page
Conflicts:
	cuckoo/web/static/css/main.css

--- a/cuckoo/web/src/scss/main.scss
+++ b/cuckoo/web/src/scss/main.scss
@@ -38,6 +38,15 @@ body[id^="analysis"]:not([id="#analysis.views.pending"]) {
 	}
 }
 
+body#analysis {
+	overflow: hidden;
+
+	.flex-grid__footer {
+		position: relative;
+		top: -20px;
+	}
+}
+
 // layout utils
 @import "layout/typography";
 @import "layout/app";
